[package]
name = "ircv3_parse"
version = "2.0.2"
authors = ["m3id"]
edition = "2021"
description = "Zero-copy parser for IRCv3 messages"
repository = "https://github.com/m3idnotfree/ircv3_parse.git"
license = "MIT OR Apache-2.0"
keywords = ["ircv3", "twitch", "irc", "parser", "chat"]
categories = ["parser-implementations", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/ircv3_parse"

[features]
default = ["std"]
std = ["bytes/std", "thiserror/std"]
serde = ["dep:serde"]

[profile.release]
debug-assertions = false

[dependencies]
bytes = { version = "1.11.0", default-features = false }
memchr = { version = "2.7.6", default-features = false }
serde = { version = "1.0.228", default-features = false, optional = true, features = ["derive"] }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
proptest = "1.9.0"
serde_json = "1.0.145"
