[package]
name = "ircv3_parse_derive"
version = "3.0.0"
authors = ["m3id"]
edition = "2021"
description = "Derive macro for ircv3_parse"
repository = "https://github.com/m3idnotfree/ircv3_parse/tree/main/ircv3_parse_derive"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ircv3_parse_derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[dev-dependencies]
ircv3_parse = "2.1.0"
trybuild = "1.0.114"
