[package]
name = "ircv3_parse_derive"
version.workspace = true
authors = ["m3id"]
edition.workspace = true
description = "Derive macro for ircv3_parse"
repository = "https://github.com/m3idnotfree/ircv3_parse/tree/main/ircv3_parse_derive"
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/ircv3_parse_derive"
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

[dev-dependencies]
ircv3_parse = { version = "^3", path = "../" }
trybuild = "1.0.114"
